hello-k8s-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s
spec:
  replicas: 4
  selector:
    matchLabels:
      app: hello-k8s
  template:
    metadata:
      labels:
        app: hello-k8s
    spec:
      containers:
        - name: hello-k8s
          image: ogslp/tomcat-modified
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
